# PokeBattleLab

./: README.md
backend/app/: dependencies.py
backend/app/adapters/: cache.py  cached_pokemon_repository.py  cached_type_repository.py  pokemon_repository.py  type_repository.py
backend/app/api/: counter_routes.py  favorites_routes.py  pokemon_routes.py  router.py  schemas.py
backend/app/domain/: fuzzy.py
backend/app/favorites/: store.py
backend/app/usecases/: analyze_type_advantage.py  compare_pokemon.py  recommend_counters.py
backend/tests/: test_cache.py  test_type_chart.py
battledex/: .gitignore  README.md
battledex/backend/: pyproject.toml  requirements.txt
battledex/backend/app/: config.py  main.py
battledex/backend/app/adapters/: cached_pokemon_repository.py  mappers.py  pokeapi_client.py
battledex/backend/app/api/: comparison_routes.py  counter_routes.py  exceptions.py  pokemon_routes.py  router.py
battledex/backend/app/domain/: contracts.py  entities.py  type_chart.py
battledex/backend/app/usecases/: get_pokemon.py  get_type_info.py  search_pokemon.py
battledex/backend/tests/: test_api_integration.py  test_entities.py  test_favorites_store.py  test_mappers.py
battledex/docs/: architecture.md
battledex/frontend/: index.html
docs/: api-reference.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: CompareView.tsx  CountersView.tsx  FavoritesView.tsx  PokemonCard.tsx  SearchView.tsx  TypesView.tsx
frontend/src/services/: api.ts
frontend/src/types/: pokemon.ts
